--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <header>
+        <nav class="navegation">
+            <div class="navbar">
+                <div class="nav-logo">
+                   <a href=""><span>LAN</span>DING</a> 
+                </div>
+                <ul class="nav-links">
+                    <li class="nav-item"><a href="#"> Home</a></li>
+                    <li class="nav-item"><a href="#"> Services</a></li>
+                    <li class="nav-item"><a href="#"> Blog</a></li>
+                </ul>
+                    <a href="#" class="btn"> Suscribe</a>
+            </div>
+        </nav>
+        <div class="site-header">
+            <div class="header-content">
+                <h2>
+                    Lorem ipsum dolor sit amet consectetur.
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque facilis perspiciatis adipisci quis
+                    enim maiores possimus modi provident, magni eum quibusdam id corporis?
+                </p>
+                <div class="cta">
+                    <div class="btn">
+                        Call us now
+                    </div>
+                    <div class="btn">
+                        Contact us
+                    </div>
+                </div>
+            </div>
+       
+        <div class="header-image">
+            <img src="img/isometric-image.png" alt="isometric-image" >
+        </div>
+     </div>
+    </header>
 
-    
+    <main>
 
+    </main>
 
+    <footer>
+
+    </footer>
 
 
 
@@ -43,4 +87,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
