ADD - main section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -13,14 +14,14 @@
         <nav class="navegation">
             <div class="navbar">
                 <div class="nav-logo">
-                   <a href=""><span>LAN</span>DING</a> 
+                    <a href=""><span>LAN</span>DING</a>
                 </div>
                 <ul class="nav-links">
                     <li class="nav-item"><a href="#"> Home</a></li>
                     <li class="nav-item"><a href="#"> Services</a></li>
                     <li class="nav-item"><a href="#"> Blog</a></li>
                 </ul>
-                    <a href="#" class="btn"> Suscribe</a>
+                <a href="#" class="btn"> Suscribe</a>
             </div>
         </nav>
         <div class="site-header">
@@ -41,15 +42,36 @@
                     </div>
                 </div>
             </div>
-       
-        <div class="header-image">
-            <img src="img/isometric-image.png" alt="isometric-image" >
+            <div class="header-image">
+                <img src="img/isometric-image.png" alt="isometric-image">
+            </div>
         </div>
-     </div>
     </header>
 
     <main>
+        <div class="site-main">
+            <div class="main-image">
+                <img src="img/main1.svg" alt="mobile search">
+            </div>
+            <div class="main-info">
+                <a href="#" class="btn">Lorem ipsun</a>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque praesentium harum iure eos, Quas
+                    sequi repudiandae nostrum saepe excepturi maiores modi.</p>
+                <a href="#" class="learnMore">Learn More</a>
+            </div>
+            <div class="main-info">
+                <a href="#" class="btn">Lorem ipsun</a>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque praesentium harum iure eos, Quas
+                    sequi repudiandae nostrum saepe excepturi maiores modi.</P>
+                <a href="#" class="learnMore">Learn More</a>
 
+            </div>
+            <div class="main-image">
+                <img src="img/main2.svg" alt="mobile search" >
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -84,7 +106,7 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
