[CHANGED] landing brand

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -14,7 +14,7 @@
         <nav class="navegation">
             <div class="navbar">
                 <div class="nav-logo">
-                    <a href=""><span>LAN</span>DING</a>
+                    <a href=""><span>You</span>Tube</a>
                 </div>
                 <ul class="nav-links">
                     <li class="nav-item"><a href="#"> Home</a></li>
@@ -49,7 +49,7 @@
             </div>
             <div id="scene">
                 <div class="layer" data-depth=".3">
-                    <img src="img/isometric-image.png" alt="isometric-image">
+                    <img src="img/designer.svg" alt="isometric-image">
                 </div>
             </div>
         </div>
@@ -85,7 +85,8 @@
                 <div class="nav-logo">
                     <a href=""><span>LAN</span>DING</a>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus voluptatibus neque illo id repellat quisquam? Autem expedita earum quae laborum ipsum ad.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus voluptatibus neque illo id
+                    repellat quisquam? Autem expedita earum quae laborum ipsum ad.
                 </p>
                 <div class="footer-social-info">
                     <a href="#"><i class="fab fa-facebook"></i></a>
@@ -107,7 +108,8 @@
             </div>
             <div class="column">
                 <h5>Contact us</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quas, sequi itaque dicta consequuntur distinctio.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quas, sequi itaque dicta
+                    consequuntur distinctio.</p>
             </div>
         </div>
     </footer>
@@ -140,9 +142,9 @@
     <script src="js/parallax.js"></script>
     <script src="js/script.js"></script>
     <script>
-		var scene = document.getElementById('scene');
-		var parallax = new Parallax(scene);
-	</script>
+        var scene = document.getElementById('scene');
+        var parallax = new Parallax(scene);
+    </script>
 </body>
 
 </html>
